optimize compilation + update employees fitness

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,15 @@ set(HEADERS
     include/solver.hpp
 )
 
-include_directories("${CMAKE_SOURCE_DIR}/include")
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
 
-add_compile_options(-Wall -Wextra -g)
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -flto")
+
+include_directories("${CMAKE_SOURCE_DIR}/include")
 
 add_executable(it45-operation-research src/main.cpp ${SOURCES} ${HEADERS})
 
